--- a/api-def/UniWebViewAuthenticationFlowCustomize.toml
+++ b/api-def/UniWebViewAuthenticationFlowCustomize.toml
@@ -154,7 +154,7 @@ void OnRefreshTokenError(long error, string message) {
 
 [[Methods]]
 name = "StartAuthenticationFlow"
-syntax = "void StartAuthenticationFlow()"
+syntax = "StartAuthenticationFlow()"
 returnType = "void"
 summary = """
 Starts the authentication flow with the standard OAuth 2.0.
@@ -163,7 +163,7 @@ This implements the abstract method in `UniWebViewAuthenticationCommonFlow`.
 
 [[Methods]]
 name = "StartRefreshTokenFlow"
-syntax = "void StartRefreshTokenFlow(string refreshToken)"
+syntax = "StartRefreshTokenFlow(string refreshToken)"
 returnType = "void"
 summary = """
 Starts the refresh flow with the standard OAuth 2.0.
