--- a/api-def/UniWebViewAuthenticationFlowLine.toml
+++ b/api-def/UniWebViewAuthenticationFlowLine.toml
@@ -129,7 +129,7 @@ void OnRefreshTokenError(long error, string message) {
 
 [[Methods]]
 name = "StartAuthenticationFlow"
-syntax = "void StartAuthenticationFlow()"
+syntax = "StartAuthenticationFlow()"
 returnType = "void"
 summary = """
 Starts the authentication flow with the standard OAuth 2.0.
@@ -138,7 +138,7 @@ This implements the abstract method in `UniWebViewAuthenticationCommonFlow`.
 
 [[Methods]]
 name = "StartRefreshTokenFlow"
-syntax = "void StartRefreshTokenFlow(string refreshToken)"
+syntax = "StartRefreshTokenFlow(string refreshToken)"
 returnType = "void"
 summary = """
 Starts the refresh flow with the standard OAuth 2.0.
