--- a/api-def/uniwebview.toml
+++ b/api-def/uniwebview.toml
@@ -1964,6 +1964,145 @@ random UUID with "png" file extension as the file name.
 """
 
 [[Methods]]
+name = "StartSnapshotForRendering"
+syntax = "StartSnapshotForRendering()"
+returnType = "void"
+summary = """
+Starts the process of continually rendering the snapshot.
+
+You take the responsibility of calling this method before you use either `GetRenderedData(InRect)` or
+`CreateRenderedTexture(InRect)` to get the rendered data or texture. It prepares a render buffer for the image
+data and performs the initial rendering for later use.
+"""
+notice = """
+If not called, the related data or texture methods will not work either and only return `null`. Once you do not
+need the web view to be rendered as texture, you should call `StopSnapshotForRendering` to clean the resources.
+"""
+
+[[Methods]]
+name = "StopSnapshotForRendering"
+syntax = "StopSnapshotForRendering()"
+returnType = "void"
+summary = """
+Stops the process of continually rendering the snapshot.
+
+You take the responsibility of calling this method when you do not need any further data or texture from
+`GetRenderedData(InRect)` or `CreateRenderedTexture(InRect)` methods.
+"""
+
+[[Methods]]
+name = "GetRenderedData"
+syntax = "GetRenderedData()"
+returnType = "byte[]"
+summary = """
+Gets the data of rendered image for the current web view.
+
+This gives you the raw bytes of the rendered image data in PNG format. You should call
+`StartSnapshotForRendering` before you try to use this method to get the current rendered data. Otherwise, this
+method returns `null`.
+"""
+returnValue = """
+The raw bytes of the rendered image data in PNG format, or `null` if the rendering process fails or the data
+is not prepared.
+"""
+notice = """
+Only software-rendered content is supported. Content rendered by hardware, such as videos and WebGL content, will
+only be rendered as a black rectangle.
+"""
+
+[[Methods]]
+name = "GetRenderedDataInRect"
+syntax = "GetRenderedDataInRect(Rect rect)"
+returnType = "byte[]"
+summary = """
+Gets the data of rendered image for the current web view in the given rect.
+
+This gives you the raw bytes of the rendered image data in PNG format for the give rect area of the web view.
+You should call `StartSnapshotForRendering` before you try to use this method to get the current rendered data.
+Otherwise, this method returns `null`.
+"""
+returnValue = """
+The raw bytes of the rendered image data in PNG format, or `null` if the rendering process fails or the data
+is not prepared.
+"""
+notice = """
+Only software-rendered content is supported. Content rendered by hardware, such as videos and WebGL content, will
+only be rendered as a black rectangle.
+"""
+[[Methods.parameters]]
+name = "rect"
+type = "Rect"
+summary = """
+The desired rect which the snapshot rendering should happen in the web view.
+
+It is based on the local coordinate of the web view. For example,
+`new Rect(webView.frame.width / 2, webView.frame.height / 2, 100, 100)` means setting origin to the center of
+the web view, taking a 100x100 square as the snapshot area.
+"""
+
+[[Methods]]
+name = "CreateRenderedTexture"
+syntax = "CreateRenderedTexture()"
+returnType = "Texture2D"
+summary = """
+Creates a rendered texture for the current web view. 
+
+This gives you a texture of the rendered image for the web view, which you can use in your 3D game world.
+You should call `StartSnapshotForRendering` before you try to use this method to get the current rendered data.
+Otherwise, this method returns `null`.
+
+This returns a plain `Texture2D` object. The texture is not user interactive and can only be used for displaying
+purpose. You take the responsibility to call `Destroy` on this texture when you do not need it anymore.
+
+Check the [Render as Texture](/guide/render-as-texture.html) guide for more.
+"""
+notice = """
+You need to destroy the returned texture when you do not need it anymore.
+
+Only software-rendered content is supported. Content rendered by hardware, such as videos and WebGL content, will
+only be rendered as a black rectangle.
+"""
+returnValue = """
+A rendered texture of the current web view, or `null` if the rendering process fails or the data is not prepared.
+"""
+
+[[Methods]]
+name = "CreateRenderedTextureInRect"
+syntax = "CreateRenderedTextureInRect(Rect rect)"
+returnType = "Texture2D"
+summary = """
+Creates a rendered texture for the current web view in the given rect.
+
+This gives you a texture of the rendered image for the web view, which you can use in your 3D game world.
+You should call `StartSnapshotForRendering` before you try to use this method to get the current rendered data.
+Otherwise, this method returns `null`.
+
+This returns a plain `Texture2D` object. The texture is not user interactive and can only be used for displaying
+purpose. You take the responsibility to call `Destroy` on this texture when you do not need it anymore. 
+
+Check the [Render as Texture](/guide/render-as-texture.html) guide for more.
+"""
+notice = """
+You need to destroy the returned texture when you do not need it anymore.
+
+Only software rendered content is supported. Content rendered by hardware, such as videos and WebGL content, will
+only be rendered as a black rectangle.
+"""
+returnValue = """
+A rendered texture of the current web view, or `null` if the rendering process fails or the data is not prepared.
+"""
+[[Methods.parameters]]
+name = "rect"
+type = "Rect"
+summary = """
+The desired rect which the snapshot rendering should happen in the web view.
+
+It is based on the local coordinate of the web view. For example,
+`new Rect(webView.frame.width / 2, webView.frame.height / 2, 100, 100)` means setting origin to the center of
+the web view, taking a 100x100 square as the snapshot area.
+"""
+
+[[Methods]]
 name = "ScrollTo"
 syntax = "ScrollTo(int x, int y, bool animated)"
 returnType = "void"
